--- a/app/src/main/res/layout/list_item_pay_by_other.xml
+++ b/app/src/main/res/layout/list_item_pay_by_other.xml
@@ -10,12 +10,12 @@
 
     <RadioButton
         android:id="@+id/radioPayment"
-        style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_padding_small"
         android:layout_marginEnd="@dimen/margin_padding_small"
-        android:textStyle="bold"
+        android:clickable="false"
+        android:theme="@style/RadioButton.PaymentSelection"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,8 +26,8 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="@dimen/margin_padding_normal"
-        app:layout_constraintTop_toBottomOf="@+id/radioPayment"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioPayment" />
 </androidx.constraintlayout.widget.ConstraintLayout>
