--- a/app/src/pwb/res/values/styles.xml
+++ b/app/src/pwb/res/values/styles.xml
@@ -35,7 +35,7 @@
         <item name="colorControlActivated">@color/pwbOrange</item>
     </style>
 
-    <style name="RadioButtonStyle">
+    <style name="RadioButton.Primary">
         <item name="colorControlNormal">@color/graySelect</item>
         <item name="colorAccent">@color/colorPrimary</item>
         <item name="android:textColorPrimaryDisableOnly">@color/graySelect</item>
