EOR-55 PaymentOption - can show creditcard promotions on fullpaymentredirect option

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -33,4 +33,5 @@
     <dimen name="ic_payment_agent_size">36dp</dimen>
     <dimen name="app_bottom_bar_size">84dp</dimen>
     <dimen name="minimum_side_product_extension">200dp</dimen>
+    <dimen name="size_bank_image">48dp</dimen>
 </resources>
