--- a/app/src/main/res/layout/list_item_pay_by_credite_card.xml
+++ b/app/src/main/res/layout/list_item_pay_by_credite_card.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_padding_normal"
         android:clickable="false"
+        style="@style/TextAppearance.AppCompat.Large"
         android:theme="@style/RadioButton.PaymentSelection"
         app:layout_constraintBottom_toTopOf="@+id/expandLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,6 +66,29 @@
             android:src="@drawable/ic_master_card"
             app:layout_constraintStart_toEndOf="@id/ic_visa"
             app:layout_constraintTop_toBottomOf="@+id/tv_description" />
+
+        <cenergy.central.com.pwb_store.view.PowerBuyTextView
+            android:id="@+id/tvSelectPromotions"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_padding_normal"
+            android:layout_marginEnd="@dimen/margin_padding_small"
+            android:text="@string/select_credit_card_promotion"
+            app:layout_constraintEnd_toEndOf="@+id/tv_description"
+            app:layout_constraintStart_toStartOf="@id/ic_visa"
+            app:layout_constraintTop_toBottomOf="@+id/ic_master_card" />
+
+        <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/promotionSpinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:minHeight="48dp"
+            android:layout_marginTop="@dimen/margin_padding_small"
+            android:layout_marginBottom="@dimen/margin_padding_small"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/tv_description"
+            app:layout_constraintStart_toStartOf="@id/ic_visa"
+            app:layout_constraintTop_toBottomOf="@+id/tvSelectPromotions" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
