--- a/app/src/main/res/layout/list_item_pay_by_other.xml
+++ b/app/src/main/res/layout/list_item_pay_by_other.xml
@@ -10,6 +10,7 @@
 
     <RadioButton
         android:id="@+id/radioPayment"
+        style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_padding_small"
