--- a/app/src/main/res/layout/list_item_pay_common.xml
+++ b/app/src/main/res/layout/list_item_pay_common.xml
@@ -11,6 +11,7 @@
     <RadioButton
         android:id="@+id/radioPayment"
         android:theme="@style/RadioButton.PaymentSelection"
+        style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:clickable="false"
