EOR-55 PaymentOptions - can select option and send payment method and update payment information

--- a/app/src/main/res/layout/list_item_pay_by_credite_card.xml
+++ b/app/src/main/res/layout/list_item_pay_by_credite_card.xml
@@ -10,11 +10,11 @@
 
     <RadioButton
         android:id="@+id/radioPayment"
+        style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_padding_normal"
         android:clickable="false"
-        style="@style/TextAppearance.AppCompat.Large"
         android:theme="@style/RadioButton.PaymentSelection"
         app:layout_constraintBottom_toTopOf="@+id/expandLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_padding_normal"
             android:layout_marginEnd="@dimen/margin_padding_small"
+            android:textColor="@color/blackText"
             android:text="@string/select_credit_card_promotion"
             app:layout_constraintEnd_toEndOf="@+id/tv_description"
             app:layout_constraintStart_toStartOf="@id/ic_visa"
@@ -82,9 +83,9 @@
             android:id="@+id/promotionSpinner"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:minHeight="48dp"
             android:layout_marginTop="@dimen/margin_padding_small"
             android:layout_marginBottom="@dimen/margin_padding_small"
+            android:minHeight="48dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/tv_description"
             app:layout_constraintStart_toStartOf="@id/ic_visa"
