EOR-55 Fix select promotion credit card view

--- a/app/src/main/res/layout/item_select_promotion.xml
+++ b/app/src/main/res/layout/item_select_promotion.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="@dimen/padding_select_payment_size"
     android:background="@color/white">
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
