--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,4 +34,7 @@
     <dimen name="app_bottom_bar_size">84dp</dimen>
     <dimen name="minimum_side_product_extension">200dp</dimen>
     <dimen name="size_bank_image">48dp</dimen>
+
+    <dimen name="text_button_pay_size">22sp</dimen>
+    <dimen name="padding_select_payment_size">4.5dp</dimen>
 </resources>
