--- a/app/src/main/res/layout/list_item_pay_by_credite_card.xml
+++ b/app/src/main/res/layout/list_item_pay_by_credite_card.xml
@@ -79,17 +79,26 @@
             app:layout_constraintStart_toStartOf="@id/ic_visa"
             app:layout_constraintTop_toBottomOf="@+id/ic_master_card" />
 
-        <androidx.appcompat.widget.AppCompatSpinner
-            android:id="@+id/promotionSpinner"
+        <FrameLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_padding_small"
             android:layout_marginBottom="@dimen/margin_padding_small"
-            android:minHeight="48dp"
+            android:padding="@dimen/margin_padding_xsmall"
+            android:background="@drawable/border_grey"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/tv_description"
             app:layout_constraintStart_toStartOf="@id/ic_visa"
-            app:layout_constraintTop_toBottomOf="@+id/tvSelectPromotions" />
+            app:layout_constraintTop_toBottomOf="@+id/tvSelectPromotions">
+
+            <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/promotionSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:minHeight="48dp"/>
+        </FrameLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
