--- a/app/src/main/res/layout/list_item_grid_product.xml
+++ b/app/src/main/res/layout/list_item_grid_product.xml
@@ -38,11 +38,27 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/margin_padding_xsmall"
             android:gravity="center"
             android:orientation="vertical"
             android:weightSum="4"
             app:layout_constraintTop_toBottomOf="@+id/img_product">
+
+            <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                android:id="@+id/promotionBadgeTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginStart="15dp"
+                android:background="@drawable/bg_badge_unselected"
+                android:paddingStart="@dimen/margin_padding_large"
+                android:paddingTop="@dimen/margin_padding_xsmall"
+                android:paddingEnd="@dimen/margin_padding_large"
+                android:paddingBottom="@dimen/margin_padding_xsmall"
+                android:textColor="@color/badge"
+                app:layout_constraintStart_toEndOf="@+id/product_image_list_shopping_cart"
+                app:layout_constraintTop_toBottomOf="@+id/product_name_list_shopping_cart"
+                tools:text="@string/credit_card_on_top" />
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 android:id="@+id/txt_product_brand"
@@ -138,7 +154,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginBottom="10dp"
                 android:contentDescription="@string/app_name"
                 tools:src="@drawable/ic_1h_badge_en" />
@@ -150,8 +166,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_padding_xsmall"
             android:visibility="visible"
-            app:layout_constraintHorizontal_bias="1"
             app:layout_constraintEnd_toEndOf="@+id/img_product"
+            app:layout_constraintHorizontal_bias="1"
             app:layout_constraintStart_toStartOf="@+id/img_product"
             app:layout_constraintTop_toTopOf="@+id/img_product">
 
@@ -170,9 +186,9 @@
                 style="@style/textProductSale"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:layout_marginStart="@dimen/margin_padding_xsmall"
                 android:gravity="center"
-                android:layout_gravity="center"
                 app:layout_constraintBottom_toBottomOf="@+id/ivSaleBadge"
                 app:layout_constraintEnd_toEndOf="@+id/ivSaleBadge"
                 app:layout_constraintStart_toStartOf="@+id/ivSaleBadge"
