--- a/app/src/main/res/layout/list_item_credit_card_on_top.xml
+++ b/app/src/main/res/layout/list_item_credit_card_on_top.xml
@@ -10,7 +10,7 @@
         android:layout_width="1dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.3" />
+        app:layout_constraintGuide_percent="0.2" />
 
     <FrameLayout
         android:id="@+id/layoutBorder"
@@ -27,7 +27,7 @@
 
         <LinearLayout
             android:id="@+id/layoutBadge"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_margin="1dp"
             android:background="@color/white"
@@ -36,7 +36,7 @@
 
             <ImageView
                 android:id="@+id/badgeIcon"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/ic_payment_agent_size"
                 android:layout_height="@dimen/ic_payment_agent_size"
                 android:contentDescription="@string/app_name"
                 android:paddingEnd="1dp"
