--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -46,15 +46,68 @@
                     tool:text="Category" />
             </LinearLayout>
 
-            <ImageButton
+            <LinearLayout
                 android:id="@+id/filterOptionsButton"
-                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/filter_all"
-                android:src="@drawable/ic_filter_24dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:background="?android:attr/selectableItemBackground"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/layout_sort"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageButton
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginEnd="@dimen/margin_padding_small"
+                    android:contentDescription="@string/filter_all"
+                    android:src="@drawable/ic_filter_24dp"
+                    app:layout_constraintEnd_toStartOf="@+id/layout_sort"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/txt_filter"
+                    style="@style/textSize18Sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/margin_padding_normal"
+                    android:ellipsize="end"
+                    android:text="@string/filters"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_sort"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:background="?android:attr/selectableItemBackground"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginEnd="@dimen/margin_padding_small"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/ic_sort" />
+
+                <cenergy.central.com.pwb_store.view.PowerBuyTextView
+                    android:id="@+id/txt_sort"
+                    style="@style/textSize18Sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/margin_padding_normal"
+                    android:ellipsize="end"
+                    android:text="@string/sort"
+                    android:textStyle="bold" />
+            </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
@@ -85,37 +138,6 @@
                 android:textStyle="bold"
                 tool:ignore="RelativeOverlap"
                 tool:text="Category" />
-
-            <LinearLayout
-                android:id="@+id/layout_sort"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:background="?android:attr/selectableItemBackground"
-                android:orientation="horizontal"
-                tool:ignore="RelativeOverlap">
-
-                <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                    android:id="@+id/txt_sort"
-                    style="@style/textSize18Sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="15dp"
-                    android:ellipsize="end"
-                    android:text="@string/sort"
-                    android:textStyle="bold" />
-
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="16dp"
-                    android:contentDescription="@string/app_name"
-                    android:src="@drawable/ic_sort" />
-
-            </LinearLayout>
-
         </RelativeLayout>
 
 
