EOR-190 Fixed amount discount should show ฿ don't show % on PDP and payment page

--- a/app/src/main/res/layout/list_item_credit_card_on_top.xml
+++ b/app/src/main/res/layout/list_item_credit_card_on_top.xml
@@ -58,7 +58,7 @@
     </FrameLayout>
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
-        android:id="@+id/tvPercent"
+        android:id="@+id/tvDiscount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="14sp"
