--- a/app/src/main/res/layout/list_item_grid_product.xml
+++ b/app/src/main/res/layout/list_item_grid_product.xml
@@ -135,14 +135,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/badge_2h"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    tools:src="@drawable/ic_1h_badge_en"
-                    android:contentDescription="@string/app_name" />
-
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvAvailableHere"
                     android:layout_width="wrap_content"
@@ -152,7 +144,7 @@
                     android:paddingTop="@dimen/margin_padding_xsmall"
                     android:paddingBottom="@dimen/margin_padding_xsmall"
                     android:gravity="center_vertical"
-                    android:text="@string/available_here"
+                    android:text="@string/available_here_badge"
                     android:textColor="@color/white"
                     android:background="@drawable/shape_orange_radius"
                     android:textStyle="bold"
